--- a/layouts/partials/dev/parameters.html
+++ b/layouts/partials/dev/parameters.html
@@ -1,11 +1,9 @@
 {{ if hugo.IsServer }}
-<button id="parameter-menu" onclick="changeParameterVisibility()"
-    class="w-8 h-8 mb-2 rounded-full text-slate-600 text-sm bg-slate-200 uppercase pointer-events-auto">
+<button id="parameter-menu" onclick="changeParameterVisibility()" class="w-8 h-8 mb-2 rounded-full text-slate-600 text-sm bg-slate-200 uppercase pointer-events-auto">
     <span>P</span>
 </button>
 
-<div id="parameter-area"
-    class="fixed w-full z-50 right-0 bottom-0 h-1/3 p-4 overflow-y-auto scroll-auto scroll-py-4 touch-auto text-slate-600 bg-white/[.95] border-y-8 border-white/50 hidden">
+<div id="parameter-area" class="fixed w-full z-50 right-0 bottom-0 h-1/3 p-4 overflow-y-auto scroll-auto scroll-py-4 touch-auto text-slate-600 bg-white/[.95] border-y-8 border-white/50 hidden">
     <table class="w-full text-left table-auto table-collapse border-slate-200">
         <caption class="text-left pb-2">Hugo Variables for the current page.</caption>
         <thead>
@@ -98,29 +96,6 @@
     </table>
 </div>
 
-<script>
-    function setParameterVisibility(data) {
-        var showParameter = data;
-        var e = document.querySelector("#parameter-area");
-        if (e.classList.contains("hidden") == showParameter) {
-            e.classList.toggle("hidden");
-        }
-        sessionStorage.setItem("showParameter", showParameter);
-    }
-
-    function changeParameterVisibility() {
-        var e = document.querySelector("#parameter-area");
-        var showParameter = e.classList.contains("hidden") ? true : false;
-        setParameterVisibility(showParameter);
-    }
-
-    function setupParameterIndicator() {
-        /* load variables from session storage */
-        var showParameter = sessionStorage.getItem("showParameter") === "true";
-
-        setParameterVisibility(showParameter);
-    }
-
-    window.onload = setupParameterIndicator();
-</script>
+{{ $parameterJS := resources.Get "js/dev-parameters.js" | resources.Fingerprint }}
+<script src="{{ $parameterJS.RelPermalink }}" integrity="{{ $parameterJS.Data.Integrity }}" crossorigin="anonymous"></script>
 {{ end }}
